--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "redbox-react": "~1.3.0",
     "sass-lint": "~1.7.0",
     "sass-loader": "~4.0.0",
+    "standard": "~7.1.2",
     "style-loader": "~0.13.1",
     "webpack": "~1.13.2",
     "webpack-dev-middleware": "~1.6.1",
